@@ -52,4 +52,43 @@
       exp="barB=BarB, fooA=FooA"
       got="${toString:my-set}"/>
   </target>
+
+  <target name="nested-mapped">
+    <propertyset id="nested-mapped">
+      <propertyset>
+        <propertyset refid="properties-starting-with-foo"/>
+        <globmapper from="foo*" to="boo*" />
+      </propertyset>
+      <propertyset>
+        <propertyset refid="properties-starting-with-bar"/>
+        <globmapper from="bar*" to="far*" />
+      </propertyset>
+    </propertyset>
+    <expect.equals
+      test="nested mapped propertysets"
+      exp="booA=FooA, farB=BarB"
+      got="${toString:nested-mapped}"/>
+  </target>
+
+  <target name="nested-mapped-mapped">
+    <propertyset id="nested-mapped-mapped">
+      <propertyset>
+        <propertyset refid="properties-starting-with-foo"/>
+        <globmapper from="foo*" to="boo*" />
+      </propertyset>
+      <propertyset>
+        <propertyset refid="properties-starting-with-bar"/>
+        <globmapper from="bar*" to="far*" />
+      </propertyset>
+      <mapper>
+        <globmapper from="boo*" to="hoo*" />
+        <globmapper from="far*" to="near*" />
+      </mapper>
+    </propertyset>
+    <expect.equals
+      test="nested mapped propertysets"
+      exp="hooA=FooA, nearB=BarB"
+      got="${toString:nested-mapped-mapped}"/>
+  </target>
+
 </project>
